--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
         <a class="header__logo" href="#">
           <img src="img/logos/pink-header-logo.svg" alt="Логотип Pink" width="74" height="23">
         </a>
-        <nav class="main-nav main-nav--opened main-nav--nojs">
+        <nav class="main-nav main-nav--closed main-nav--nojs">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
           </button>
@@ -47,6 +47,8 @@
           <div class="intro__header">
             <p class="intro__slogan">Взгляните на жизнь
               иначе!</p>
+            <div class="intro__screen">
+            </div>
           </div>
           <div class="intro__download-wrapper">
             <a class="intro__download-button" href="#">
@@ -276,11 +278,11 @@
       </div>
       <section class="map">
         <h2 class="visually-hidden">Как нас найти?</h2>
-        <p class="map__wrapper">
+        <div class="map__wrapper">
           <!-- <img class="map__img" src="img/map/map.jpg" alt="Карта указывающая адресс ул. Большая
           Конюшенная, 19/8" width="1200" height="502"> -->
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sen!2sua!4v1641756441144!5m2!1sen!2sua" width="1200" height="502" style="border: 0;" title="ул. Большая Конюшенная, 19/8" allowfullscreen="" loading="lazy"></iframe>
-        </p>
+        </div>
       </section>
     </section>
   </main>
