--- a/source/index.html
+++ b/source/index.html
@@ -279,9 +279,10 @@
       <section class="map">
         <h2 class="visually-hidden">Как нас найти?</h2>
         <div class="map__wrapper">
+          <div class="map__decoration"></div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sen!2sua!4v1641756441144!5m2!1sen!2sua" width="1200" height="502" style="border: 0;" title="ул. Большая Конюшенная, 19/8" allowfullscreen="" loading="lazy"></iframe>
           <!-- <img class="map__img" src="img/map/map.jpg" alt="Карта указывающая адресс ул. Большая
           Конюшенная, 19/8" width="1200" height="502"> -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253003165!2d30.320858716173472!3d59.938719169054075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2sBolshaya%20Konyushennaya%20St%2C%2019%2F8%2C%20Sankt-Peterburg%2C%20Russia%2C%20191186!5e0!3m2!1sen!2sua!4v1641756441144!5m2!1sen!2sua" width="1200" height="502" style="border: 0;" title="ул. Большая Конюшенная, 19/8" allowfullscreen="" loading="lazy"></iframe>
         </div>
       </section>
     </section>
