Поправил плашку и манифест

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1 /">
   <title>Пинк Каталог</title>
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon/apple.png">
@@ -83,13 +83,15 @@
           Видите, как не хватает ваших?
         </p>
         <div class="catalog__panorama">
+          <div class="catalog__label-wrapper container">
+            <p class="catalog__label">ПАНОРАМА ДНЯ</p>
+          </div>
           <div class="catalog__panorma-image-wrapper">
             <picture>
               <source media="(min-width: 1200px)" srcset="img/catalog/panorama/panorama-desktop.jpg 1x, img/catalog/panorama/panorama-desktop@2x.jpg 2x">
               <source media="(min-width: 660px)" srcset="img/catalog/panorama/panorama-tablet.jpg 1x, img/catalog/panorama/panorama-tablet@2x.jpg 2x">
               <img src="img/catalog/panorama/panorama-mobile.jpg" srcset="img/catalog/panorama/panorama-mobile@2x.jpg 2x" alt="Фото моста" width="320" height="137">
             </picture>
-            <p class="catalog__label">ПАНОРАМА ДНЯ</p>
           </div>
           <div class="container">
             <div class="catalog__inner-wrapper">
