--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1/">
   <title>Pink - Формы регистрации</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="preload" href="css/style.min.css" crossorigin="anonymous">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon/apple.png">
@@ -16,7 +16,7 @@
 <body class="page__body">
   <header class="header">
     <div class="header__wrapper container">
-      <a class="header__logo-wrapper" href="#">
+      <a class="header__logo-wrapper" href="index.html">
         <svg class="header__logo header__logo--mobile" width="74" height="23" viewBox="0 0 74 23" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
@@ -91,16 +91,16 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list">
             <li class="main-nav__list-item">
-              <a href="#">Главная</a>
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__list-item">
+              <a href="catalog.html">Фотографии</a>
             </li>
             <li class="main-nav__list-item main-nav__list-item--active">
-              <a href="#">Фотографии</a>
+              <a href="form.html">Конкурс</a>
             </li>
             <li class="main-nav__list-item">
-              <a href="#">Конкурс</a>
-            </li>
-            <li class="main-nav__list-item">
-              <a href="#">HTML Academy</a>
+              <a href="https://htmlacademy.ru">HTML Academy</a>
             </li>
           </ul>
         </div>
@@ -321,7 +321,7 @@
     </ul>
     <p class="footer__copyright">
       <span>Разработано</span>
-      <a class="footer__copyright-link" href="https://htmlacademy.ru">
+      <a class="footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
         <svg width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
           <path fill="#"
             d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
